<resources>
    <string name="app_name">Sport sport</string>
    <string name="pulse_calculator">Pulzz Calculor</string>
    <string name="bmi_calculator">Bundesministerium für Inneres</string>
    <string name="welcome">Henlo welcome. The on and onlz app a true sportsman needs</string>
    <string name="home_picture">Sport clipart</string>
    <string name="age">Age</string>
    <string name="calculate">calululus</string>
    <string name="enter_data">enter se deta</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="surprise">Surprise me</string>
    <string name="pulse_max_frequency">Maximal pulse: %1$.2f</string>
    <string name="pulse_type">Type</string>
    <string name="pulse_explanation">Explanation</string>
    <string name="pulse_min">Min</string>
    <string name="pulse_max">Max</string>
    <string name="pulse_rekom">REKOM</string>
    <string name="pulse_rekom_text">Regeneration und Kompensation</string>
    <string name="pulse_ga1">GA1</string>
    <string name="pulse_ga1_text">Grundlagenausdauerbereich 1</string>
    <string name="pulse_ga2">GA2</string>
    <string name="pulse_ga2_text">Grundlagenausdauerbereich 2</string>
    <string name="pulse_wsa">WSA</string>
    <string name="pulse_wsa_text">Wettkampfspezifische Ausdauer</string>
    <string name="pulse_rekom_max">70%</string>
    <string name="pulse_ga1_min">65%</string>
    <string name="pulse_ga1_max">80%</string>
    <string name="pulse_ga2_min">80%</string>
    <string name="pulse_ga2_max">90%</string>
    <string name="pulse_wsa_min">90%</string>
    <string name="pulse_wsa_max">100%</string>
    <string name="weight">Weight (kg)</string>
    <string name="bmi_result">BMI: %1$.2f (%2$s)</string>
    <string name="too_small_at_least_zero">%1$s too small, must be at least zero</string>
    <string name="invalid_format">%1$s was in an invalid format</string>
    <string name="height">Height (cm)</string>
    <string name="untergewicht">Untergewicht</string>
    <string name="normalgewicht">Normalgewicht</string>
    <string name="uebergewicht">Übergewicht</string>
    <string name="adipositas">Adipositas</string>
    <string name="starke_adipositas">Starke Adipositas</string>
    <string name="bmi_male">BMI Männlich</string>
    <string name="bmi_female">BMI Weiblich</string>
    <string name="untergewicht_value_male">25-25</string>
    <string name="untergewicht_value_female">19-24</string>
    <string name="normalgewicht_value_male">20-25</string>
    <string name="normalgewicht_value_female">19-24</string>
    <string name="uebergewicht_value_male">26-30</string>
    <string name="uebergewicht_value_female">25-30</string>
    <string name="adipositas_value">31-40</string>
    <string name="starke_adipositas_value"><![CDATA[>40]]></string>
</resources>
