<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PulseActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/pulse" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_data" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/age"
        android:hint="@string/age"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sex"
        android:checkedButton="@id/sex_surprise">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sex_female"
            android:text="@string/female" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sex_male"
            android:text="@string/male" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sex_surprise"
            android:text="@string/surprise" />
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:onClick="onCalculateButtonClicked" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/result" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:padding="3dip" android:text="@string/pulse_type" />
                <TextView android:padding="3dip" android:text="@string/pulse_explanation" />
                <TextView android:padding="3dip" android:text="@string/pulse_min" />
                <TextView android:padding="3dip" android:text="@string/pulse_max" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:padding="3dip" android:text="@string/pulse_rekom" />
                <TextView android:padding="3dip" android:text="@string/pulse_rekom_text" />
                <TextView android:padding="3dip" android:id="@+id/pulse_rekom_min" />
                <TextView android:padding="3dip" android:id="@+id/pulse_rekom_max"
                    android:text="@string/pulse_rekom_max" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:padding="3dip" android:text="@string/pulse_ga1" />
                <TextView android:padding="3dip" android:text="@string/pulse_ga1_text" />
                <TextView android:padding="3dip" android:id="@+id/pulse_ga1_min"
                    android:text="@string/pulse_ga1_min" />
                <TextView android:padding="3dip" android:id="@+id/pulse_ga1_max"
                    android:text="@string/pulse_ga1_max" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:padding="3dip" android:text="@string/pulse_ga2" />
                <TextView android:padding="3dip" android:text="@string/pulse_ga2_text" />
                <TextView android:padding="3dip" android:id="@+id/pulse_ga2_min"
                    android:text="@string/pulse_ga2_min" />
                <TextView android:padding="3dip" android:id="@+id/pulse_ga2_max"
                    android:text="@string/pulse_ga2_max" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:padding="3dip" android:text="@string/pulse_wsa" />
                <TextView android:padding="3dip" android:text="@string/pulse_wsa_text" />
                <TextView android:padding="3dip" android:id="@+id/pulse_wsa_min"
                    android:text="@string/pulse_wsa_min" />
                <TextView android:padding="3dip" android:id="@+id/pulse_wsa_max"
                    android:text="@string/pulse_wsa_max" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
